--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_map: ^7.0.0
   latlong2: ^0.9.1
+  logging: ^1.2.0
 
 dev_dependencies:
   flutter_test:
