--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter_map: ^7.0.0
   latlong2: ^0.9.1
   logging: ^1.2.0
+  intl: ^0.19.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
