Git ignore pubspec.lock

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
-
+build/
 # IntelliJ related
 *.iml
 *.ipr
@@ -31,7 +31,7 @@ migrate_working_dir/
 .pub/
 /build/
 .vscode/*
-pubspec.lock
+
 # Symbolication related
 app.*.symbols
 
@@ -42,3 +42,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+pubspec.lock
